Added support for listing public information on endpoints, this can be used to build login pages
