# middleware/swagger_server/models/context.py
@@ -13,12 +13,12 @@ class Context(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, endpoint_id: int=None, average_size: int=None, enabled: bool=None, filestore_id: int=None, filestore_name: str=None, id: int=None, customid: str=None, login_mappings: str=None, max_quota: int=None, name: str=None, read_database: object=None, write_database: object=None, used_quota: int=None, user_attributes: object=None, user: User=None):
+    def __init__(self, endpoint_id: str=None, average_size: int=None, enabled: bool=None, filestore_id: int=None, filestore_name: str=None, id: int=None, customid: str=None, login_mappings: str=None, max_quota: int=None, name: str=None, read_database: object=None, write_database: object=None, used_quota: int=None, user_attributes: object=None, user: User=None):
         """
         Context - a model defined in Swagger
 
         :param endpoint_id: The endpoint_id of this Context.
-        :type endpoint_id: int
+        :type endpoint_id: str
         :param average_size: The average_size of this Context.
         :type average_size: int
         :param enabled: The enabled of this Context.
@@ -49,7 +49,7 @@ class Context(Model):
         :type user: User
         """
         self.swagger_types = {
-            'endpoint_id': int,
+            'endpoint_id': str,
             'average_size': int,
             'enabled': bool,
             'filestore_id': int,
@@ -113,24 +113,24 @@ class Context(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def endpoint_id(self) -> int:
+    def endpoint_id(self) -> str:
         """
         Gets the endpoint_id of this Context.
         The OXAP endpoint of the context
 
         :return: The endpoint_id of this Context.
-        :rtype: int
+        :rtype: str
         """
         return self._endpoint_id
 
     @endpoint_id.setter
-    def endpoint_id(self, endpoint_id: int):
+    def endpoint_id(self, endpoint_id: str):
         """
         Sets the endpoint_id of this Context.
         The OXAP endpoint of the context
 
         :param endpoint_id: The endpoint_id of this Context.
-        :type endpoint_id: int
+        :type endpoint_id: str
         """
 
         self._endpoint_id = endpoint_id
