# middleware/swagger_server/swagger/swagger.yaml
@@ -27,6 +27,8 @@ tags:
   description: "Open-Xchange App Suite Publication"
 - name: "environment"
   description: "Open-Xchange App Suite Environment"
+- name: "endpoints"
+  description: "Public Endpoint Information of all Open-Xchange Admin Panel Accounts"
 - name: "oxapaccount"
   description: "The Open-Xchange Admin Panel Account"
 schemes:
@@ -50,14 +52,12 @@ paths:
         in: "query"
         description: "Id of the OXAP account"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       - name: "endpointId"
         in: "query"
         description: "Id of the OXAP endpoint for this OXAP account"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       responses:
         200:
           description: "Successful Operation"
@@ -86,14 +86,12 @@ paths:
         in: "query"
         description: "Id of the OXAP account"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       - name: "endpointId"
         in: "query"
         description: "Id of the OXAP endpoint for this OXAP account"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       - in: "body"
         name: "contextObject"
         description: "Context object that needs to be created within the given endpoint"
@@ -132,14 +130,12 @@ paths:
         in: "query"
         description: "Id of the OXAP account"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       - name: "endpointId"
         in: "query"
         description: "Id of the OXAP endpoint for this OXAP account"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       responses:
         400:
           description: "Invalid ID supplied"
@@ -388,6 +384,28 @@ paths:
       x-open-xchange-soap-reference-operation-interface: "OXPublicationService"
       x-open-xchange-soap-reference-operation-id: "getPublication"
       x-swagger-router-controller: "swagger_server.controllers.publication_controller"
+  /oxap/endpoints:
+    get:
+      tags:
+      - "endpoints"
+      summary: "Get a list of all Open-Xchange Admin Panel account endpoints"
+      description: "Get a list with restricted (public) information of all Open-Xchange\
+        \ Admin Panel account endpoints"
+      operationId: "get_all_endpoints"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "Successful Operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/inline_response_200"
+      security: []
+      x-swagger-router-controller: "swagger_server.controllers.endpoints_controller"
   /oxap/account:
     get:
       tags:
@@ -569,8 +587,7 @@ definitions:
     - "user"
     properties:
       endpointId:
-        type: "integer"
-        format: "int64"
+        type: "string"
         description: "The OXAP endpoint of the context"
       average_size:
         type: "integer"
@@ -1295,8 +1312,7 @@ definitions:
     - "name"
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: "string"
         description: ""
       name:
         type: "string"
@@ -1311,8 +1327,7 @@ definitions:
     - "name"
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: "string"
         description: ""
       name:
         type: "string"
@@ -1330,8 +1345,7 @@ definitions:
     - "name"
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: "string"
       name:
         type: "string"
         description: ""
@@ -1373,3 +1387,23 @@ definitions:
         type: "string"
       message:
         type: "string"
+  inline_response_200:
+    properties:
+      oxap_account_id:
+        type: "string"
+        description: ""
+      oxap_account_name:
+        type: "string"
+        description: ""
+      oxap_account_description:
+        type: "string"
+        description: ""
+      endpoint_id:
+        type: "string"
+        description: ""
+      endpoint_name:
+        type: "string"
+        description: ""
+      endpoint_description:
+        type: "string"
+        description: ""
